# Contact-Management-System

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COMMIT_LOG.txt  Makefile  README.md  run_tests.sh
.github/workflows/: ci.yml
docs/: SECURITY.md
include/: auth.h  contacts.h  csv.h  db.h  util.h
output/: contacts.csv  password.txt
src/: auth.c  contacts.c  csv.c  db.c  main.c  util.c
tests/: CMakeLists.txt  test_auth.c  test_csv.c  test_integration.c  test_util.c
tests/fixtures/: import.csv
