# Purpose: Test configuration. Author: GitHub Copilot
cmake_minimum_required(VERSION 3.15)

find_package(PkgConfig)
find_package(cmocka CONFIG QUIET)
if(NOT cmocka_FOUND AND PkgConfig_FOUND)
    pkg_check_modules(CMOCKA cmocka)
endif()

if(NOT cmocka_FOUND AND NOT CMOCKA_FOUND)
    message(FATAL_ERROR "cmocka not found. Install cmocka to build tests.")
endif()

add_executable(test_util test_util.c)
add_executable(test_csv test_csv.c)
add_executable(test_auth test_auth.c)
add_executable(test_integration test_integration.c)

foreach(t test_util test_csv test_auth test_integration)
    if(TARGET cmocka::cmocka)
        target_include_directories(${t} PRIVATE ../include)
        target_link_libraries(${t} PRIVATE cmocka::cmocka SQLite::SQLite3)
    else()
        target_include_directories(${t} PRIVATE ../include ${CMOCKA_INCLUDE_DIRS})
        target_link_libraries(${t} PRIVATE ${CMOCKA_LIBRARIES} SQLite::SQLite3)
    endif()
    if(HAVE_SODIUM)
        target_compile_definitions(${t} PRIVATE HAVE_LIBSODIUM)
        if(TARGET unofficial-sodium::sodium)
            target_link_libraries(${t} PRIVATE unofficial-sodium::sodium)
        else()
            target_include_directories(${t} PRIVATE ${SODIUM_INCLUDE_DIRS})
            target_link_libraries(${t} PRIVATE ${SODIUM_LIBRARIES})
        endif()
    elseif(HAVE_ARGON2)
        target_compile_definitions(${t} PRIVATE HAVE_ARGON2)
        target_include_directories(${t} PRIVATE ${ARGON2_INCLUDE_DIRS})
        target_link_libraries(${t} PRIVATE ${ARGON2_LIBRARIES})
    endif()
endforeach()

target_sources(test_util PRIVATE ../src/util.c)
target_sources(test_csv PRIVATE ../src/util.c ../src/csv.c ../src/contacts.c ../src/db.c)
target_sources(test_auth PRIVATE ../src/util.c ../src/auth.c ../src/db.c)
target_sources(test_integration PRIVATE ../src/util.c ../src/csv.c ../src/contacts.c ../src/db.c ../src/auth.c)

add_test(NAME test_util COMMAND test_util)
add_test(NAME test_csv COMMAND test_csv)
add_test(NAME test_auth COMMAND test_auth)
add_test(NAME test_integration COMMAND test_integration)
